namespaces/hello-world/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: hello-world
  labels:
    istio.io/rev: asm-1104-6
