namespaces/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      serviceAccountName: default
      containers:
      - name: hello-world
        image: us-east4-docker.pkg.dev/mabenoit-demo/containers/hello-world:v1
        ports:
          - name: http
            containerPort: 8080
