namespaces/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: hello-world
  type: LoadBalancer
